--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@
     font-weight: 700;
     margin-left: 10px;
     margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.music:hover {
+  background-color: #000;
+  color: #fff;
 }
 
 .music-logo {
