change: button instead div for music list

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@
     margin-left: 10px;
     margin-bottom: 20px;
     cursor: pointer;
+    border: none;
+    background-color: #fff;
 }
 
 .music:hover {
